<resources>
    <string name="app_name">La Reclame</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="app_logo">App logo</string>
    <string name="name">Ayazhan Aitzhanova</string>
    <string name="user_image">user-image</string>
    <string name="username">Username</string>
    <string name="rating_example">Rating: 4.99</string>
    <string name="Lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="search">Search</string>
    <string name="announcement">Create an announcement</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="category">Category*</string>
    <string name="description">Description*</string>
    <string name="example_lost_and_found">Example, lost-and-found</string>
    <string name="example_id_card">Example, ID Card</string>
    <string name="name_of_your_product">Name of your product*</string>
    <string name="description_of_your_product">Description of your product</string>
    <string name="accommodation">Accommodation</string>
    <string name="buy_sale">Buy/sale</string>
    <string name="lost_and_found">Lost-And-Found</string>
    <string name="project">Project</string>
    <string name="other">Other</string>
    <string name="services">Services</string>
<!--    <string name="today_11_23">Today 11:23</string>-->
    <string name="today_11_23">11:55 11-05-2022</string>
    <string name="_3">Продам 3-х комнатную квартиру в центре города</string>
    <string name="_19_500_000">19 500 000 тенге</string>
    <string name="todo">TODO</string>

    <string-array name="categories">
        <item>Accommodation</item>
        <item>Lost-And-Found</item>
        <item>Buy/Sale</item>
        <item>Project</item>
        <item>Services</item>
        <item>Others</item>
    </string-array>
</resources>