<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ImageLogo"
        android:layout_width="350dp"
        android:layout_height="270dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageLogo"
        android:hint="@string/username"
        android:textSize="20sp"
        android:autofillHints="username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:hint="@string/password"
        android:textSize="20sp"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/do_not_have_an_account"
        android:onClick="no_account_onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:hint="@string/don_t_have_an_account"
        android:textSize="20sp"
        android:gravity="center" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/do_not_have_an_account"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        android:onClick="onLoginClick"/>



</androidx.constraintlayout.widget.ConstraintLayout>