<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="228dp"
        android:layout_height="212dp"
        android:layout_marginEnd="92dp"
        android:cropToPadding="true"
        android:foregroundGravity="center"
        android:padding="15dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/sign_up_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/username"
        android:padding="10sp"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/sign_up_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:hint="Barcode"
        android:inputType="number"
        android:padding="10sp"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_username"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_barcode"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_re_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10sp"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="244dp"
        android:background="@drawable/button_bg"
        android:onClick="onRegisterClick"
        android:paddingHorizontal="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_re_enter"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/light_grey"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>